--- a/NewsEngine2.0/Views/News/Index.cshtml
+++ b/NewsEngine2.0/Views/News/Index.cshtml
@@ -21,5 +21,12 @@
  }
 </table>
 
+
+<div class="row">
+    <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+
+    </div>
+</div>
+
 <a href="/News/New">Adaugare Stire</a>
 
