News,Category,Home desing

--- a/NewsEngine2.0/Content/Site.css
+++ b/NewsEngine2.0/Content/Site.css
@@ -22,3 +22,10 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.truncate { /* Required declarations: */
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical; /* Limit the text block to x lines */
+    -webkit-line-clamp: 5;
+}
