--- a/NewsEngine2.0/Views/News/EditorIndex.cshtml
+++ b/NewsEngine2.0/Views/News/EditorIndex.cshtml
@@ -3,5 +3,62 @@
     ViewBag.Title = "EditorIndex";
 }
 
+
+
 <h2>EditorIndex</h2>
+
+@if (User.IsInRole("Editor"))
+{
+    @foreach (NewsEngine2._0.Models.News item in ViewBag.News)
+    {
+        <div class="row">
+            <div class="col-lg-2 col-md-2">
+            </div>
+            <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+                <a href="/News/Show/@item.NewsId">
+                    <div class="panel panel-success">
+                        <div class="panel-heading">@item.Title</div>
+                        <div class="panel-body">
+                            @item.Content
+                        </div>
+                        <div class="panel-footer">
+
+                            @using (Html.BeginForm(actionName: "Delete", controllerName: "News", method: FormMethod.Post, routeValues: new { id = item.NewsId }))
+                            {
+
+                                @Html.HttpMethodOverride(HttpVerbs.Delete)
+                                <br />
+                                <button class="btn btn-info" type="submit">Sterge</button>
+
+                            }
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-2 col-md-2">
+            </div>
+        </div>
+    }
+
+    <div>
+        <nav aria-label="Page navigation">
+            <ul class="pagination">
+                <li>
+                    <a href="/News/Index?page=1" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                    </a>
+                </li>
+                @for (int i = 1; i <= ViewBag.lastPage; i++)
+                {
+                    <li><a href="/News/Index?page=@i">@(i)</a></li>
+                }
+                <li>
+                    <a href="/News/Index?page=@(ViewBag.lastPage)" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+}
 
