--- a/NewsEngine2.0/Views/News/Index.cshtml
+++ b/NewsEngine2.0/Views/News/Index.cshtml
@@ -1,31 +1,74 @@
-﻿
-    ViewBag.Title = "Index";
+﻿@{   
+ ViewBag.Title = "Index";
 }
 
 <h2>Index</h2>
 
-<table>
-    <tr>
-        <th>Title</th>
-        <th>Content</th>
-        <th>Created Date</th>
-    </tr>
- @foreach(NewsEngine2._0.Models.News news in ViewBag.News)
- {
-     <tr>
-         <td>@news.Title</td>
-         <td>@news.Content</td>
-         <td>@news.CreateDate</td>
-     </tr>
- }
-</table>
+@foreach (NewsEngine2._0.Models.News item in ViewBag.News)
+{
 
+    <div class="row">
+        <div class="col-lg-2 col-md-2">
+        </div>
+        <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+            <a href="/News/Show/@item.NewsId">
+                <div class="panel panel-success">
+                    <div class="panel-heading">@item.Title</div>
+                    <div class="panel-body">
+                       <p class="truncate text-justify"> @item.Content</p>
+                    </div>
+                    @if (User.IsInRole("Administrator"))
+                    {
+                    <div class="panel-footer">
 
-<div class="row">
-    <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                        @using (Html.BeginForm(actionName: "Delete", controllerName: "News", method: FormMethod.Post, routeValues: new { id = item.NewsId }))
+                        {
 
+                            @Html.HttpMethodOverride(HttpVerbs.Delete)
+
+                            <button class="btn btn-info" type="submit">Sterge</button>
+
+                        }
+                    </div>
+                    }
+                </div>
+            </a>
+        </div>
+        <div class="col-lg-2 col-md-2">
+        </div>
     </div>
-</div>
+}
+    <div class="row">
+        <div class="col-lg-2 col-md-2">
+        </div>
+        <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+            <div>
+                <nav aria-label="Page navigation">
+                    <ul class="pagination">
+                        <li>
+                            <a href="/News/Index?page=1" aria-label="Previous">
+                                <span aria-hidden="true">&laquo;</span>
+                            </a>
+                        </li>
+                        @for (int i = 1; i <= ViewBag.lastPage; i++)
+                        {
+                            <li><a href="/News/Index?page=@i">@(i)</a></li>
+                        }
+                        <li>
+                            <a href="/News/Index?page=@(ViewBag.lastPage)" aria-label="Next">
+                                <span aria-hidden="true">&raquo;</span>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <div class="col-lg-2 col-md-2">
+        </div>
+    </div>
+    
+
+
 
 
 
