--- a/NewsEngine2.0/Views/Shared/_Layout.cshtml
+++ b/NewsEngine2.0/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-inverse navbar-fixed-top" style="margin-bottom:0">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -18,23 +18,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("ReadyToGo News", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    @*@if (ViewData.ContainsKey("Category") && ViewData["Category"]!=null)
-        {
-        <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categori <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-                @foreach(var category in ViewData["Category"] as IEnumerable<NewsEngine2._0.Models.Category>)
-                {
-                    <li>@Html.ActionLink(category.Name,"ShowNewsByCategory","News",category.CategoryId)</li>
-                }
-            </ul>
-        </li>
-        }*@
+                    <li>@Html.ActionLink("Stiri Actuale", "Index", "News")</li>
                     @if (User.IsInRole("Administrator"))
                     {
                         <li class="dropdown">
@@ -46,6 +34,7 @@
 
                             </ul>
                         </li>
+                        <li>@Html.ActionLink("Categori", "Index", "Category")</li>
                     }
                     @if (User.IsInRole("Editor"))
                     {
@@ -53,14 +42,19 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Editor <span class="caret"></span></a>
                             <ul class=" dropdown-menu">
                                 <li>@Html.ActionLink("Adaugare Articol", "New", "News")</li>
-                               
-                                
+                                <li>@Html.ActionLink("Articolele mele", "EditorIndex", "News")</li>
+
 
                             </ul>
                         </li>
+                        <li>@Html.ActionLink("Categori", "Index", "Category")</li>
                     }
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    @if (User.IsInRole("User"))
+                    {
+                        <li>@Html.ActionLink("Categori", "Index", "Category")</li>
+                        <li>@Html.ActionLink("Propune Stire", "New", "ProposedNews")</li>
+                    }
+
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -70,7 +64,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - ReadyToGo News</p>
         </footer>
     </div>
 
