--- a/NewsEngine2.0/Views/News/EditorIndex.cshtml
+++ b/NewsEngine2.0/Views/News/EditorIndex.cshtml
@@ -3,62 +3,98 @@
     ViewBag.Title = "EditorIndex";
 }
 
-
-
-<h2>EditorIndex</h2>
-
 @if (User.IsInRole("Editor"))
 {
-    @foreach (NewsEngine2._0.Models.News item in ViewBag.News)
-    {
-        <div class="row">
-            <div class="col-lg-2 col-md-2">
-            </div>
-            <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                <a href="/News/Show/@item.NewsId">
-                    <div class="panel panel-success">
-                        <div class="panel-heading">@item.Title</div>
-                        <div class="panel-body">
-                            @item.Content
-                        </div>
-                        <div class="panel-footer">
-
-                            @using (Html.BeginForm(actionName: "Delete", controllerName: "News", method: FormMethod.Post, routeValues: new { id = item.NewsId }))
-                            {
-
-                                @Html.HttpMethodOverride(HttpVerbs.Delete)
-                                <br />
-                                <button class="btn btn-info" type="submit">Sterge</button>
-
-                            }
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-2 col-md-2">
+    <br />
+    <br />
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <div class="panel panel-info">
+                <div class="panel-body">
+                    <a class="btn btn-success" href="/News/Index">Toate stirile</a>
+                    @foreach (NewsEngine2._0.Models.Category item in ViewBag.Categories)
+                    {
+                        <a class="btn btn-success" href="/News/IndexByCategory/@item.CategoryId">@item.Name</a>
+                    }
+                </div>
             </div>
         </div>
-    }
-
-    <div>
-        <nav aria-label="Page navigation">
-            <ul class="pagination">
-                <li>
-                    <a href="/News/Index?page=1" aria-label="Previous">
-                        <span aria-hidden="true">&laquo;</span>
-                    </a>
-                </li>
-                @for (int i = 1; i <= ViewBag.lastPage; i++)
-                {
-                    <li><a href="/News/Index?page=@i">@(i)</a></li>
-                }
-                <li>
-                    <a href="/News/Index?page=@(ViewBag.lastPage)" aria-label="Next">
-                        <span aria-hidden="true">&raquo;</span>
-                    </a>
-                </li>
-            </ul>
-        </nav>
     </div>
+
+    foreach (NewsEngine2._0.Dto.MediaDto.MediaDto item in ViewBag.News)
+    {
+
+        <div class="row">
+
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
+                <div class="panel panel-success">
+                    <div class="panel-heading"><a style="color:black" href="/News/Show/@item.News.NewsId">@item.News.Title</a></div>
+                    <div class="panel-body">
+                        <div class="media">
+                            @if (item.Medias.Count > 0)
+                            {
+                                <div class="media-left media-middle">
+                                    <a href="#">
+                                        <img class="media-object" style="width:125px; height:95px;" src="/Images/@item.Medias[0].Path" alt="...">
+                                    </a>
+                                </div>
+                            }
+                            <div class="media-body">
+                                <p class="truncate text-justify"> @item.News.Content</p>
+                            </div>
+                        </div>
+                    </div>
+                    @if (User.IsInRole("Editor"))
+                    {
+                        <div class="panel-footer">
+                            <div class="btn-group">
+                                @using (Html.BeginForm(actionName: "Delete", controllerName: "News", method: FormMethod.Post, routeValues: new { id = item.News.NewsId }))
+                                {
+
+                                    @Html.HttpMethodOverride(HttpVerbs.Delete)
+
+                                    <button class="btn btn-danger" type="submit">Sterge</button>
+                                    <a class="btn btn-info" href="/News/Edit/@item.News.NewsId">Editeaza</a>
+                                }
+                                
+                            </div>
+                        </div>
+                    }
+                </div>
+
+            </div>
+
+        </div>
+    }
+    <div class="row">
+        <div class="col-lg-2 col-md-2">
+        </div>
+        <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+            <div>
+                <nav aria-label="Page navigation">
+                    <ul class="pagination">
+                        <li>
+                            <a href="/News/Index?page=1" aria-label="Previous">
+                                <span aria-hidden="true">&laquo;</span>
+                            </a>
+                        </li>
+                        @for (int i = 1; i <= ViewBag.lastPage; i++)
+                        {
+                            <li><a href="/News/Index?page=@i">@(i)</a></li>
+                        }
+                        <li>
+                            <a href="/News/Index?page=@(ViewBag.lastPage)" aria-label="Next">
+                                <span aria-hidden="true">&raquo;</span>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <div class="col-lg-2 col-md-2">
+        </div>
+    </div>
+
 }
 
