--- a/NewsEngine2.0/Views/News/Index.cshtml
+++ b/NewsEngine2.0/Views/News/Index.cshtml
@@ -1,9 +1,28 @@
-﻿@{   
- ViewBag.Title = "Index";
+﻿@{
+    ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
 
+<div class="row">
+    <div class="col-lg-2 col-md-2">
+    </div>
+    <h2>Index</h2>
+    <div class="col-lg-2 col-md-2">
+    </div>
+    <p>
+        @using (Html.BeginForm("Index", "News", FormMethod.Get))
+        {
+            <b>Caută după:</b>@Html.RadioButton("searchBy", "Title") <text>Titlu</text>
+            @Html.RadioButton("searchBy", "Content") <text>Conținut</text>
+            @Html.TextBox("SearchString") <br />
+            <div class="col-lg-2 col-md-2">
+            </div>
+            <input type="submit" value="Caută" />
+        }
+    </p>
+
+
+</div>
 @foreach (NewsEngine2._0.Models.News item in ViewBag.News)
 {
 
@@ -11,17 +30,43 @@
         <div class="col-lg-2 col-md-2">
         </div>
         <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-            <a href="/News/Show/@item.NewsId">
-                <div class="panel panel-success">
+            <div class="panel panel-success">
+                <a href="/News/Show/@item.NewsId">
+
                     <div class="panel-heading">@item.Title</div>
                     <div class="panel-body">
-                       <p class="truncate text-justify"> @item.Content</p>
+                        <p class="truncate text-justify"> @item.Content</p>
                     </div>
+                </a>
+                <div class="panel-footer">
+                    <h1>Comentarii:</h1>
+
+                    @if (ViewBag.Comments != null)
+                    {
+                        foreach (NewsEngine2._0.Models.Comment com in ViewBag.Comments)
+                        {<h1>com.NewsId</h1>
+                            if (com.NewsId == item.NewsId)
+                            {
+                                <div class=" panel panel-default">
+
+                                    @Html.Partial("CommentDetails", com)
+                                </div>
+                                <br />
+                            }
+                        }
+                    }
+                    else
+                    { <h1>nu am comm</h1>}
+                    @*@{Html.RenderAction("New", "Comment", new { id = item.NewsId });*@
+                    @*  }*@
+
+
+
                     @if (User.IsInRole("Administrator"))
                     {
-                    <div class="panel-footer">
 
-                        @using (Html.BeginForm(actionName: "Delete", controllerName: "News", method: FormMethod.Post, routeValues: new { id = item.NewsId }))
+
+                        using (Html.BeginForm(actionName: "Delete", controllerName: "News", method: FormMethod.Post, routeValues: new { id = item.NewsId }))
                         {
 
                             @Html.HttpMethodOverride(HttpVerbs.Delete)
@@ -29,46 +74,41 @@
                             <button class="btn btn-info" type="submit">Sterge</button>
 
                         }
-                    </div>
+
                     }
                 </div>
-            </a>
+            </div>
+
         </div>
         <div class="col-lg-2 col-md-2">
         </div>
     </div>
 }
-    <div class="row">
-        <div class="col-lg-2 col-md-2">
-        </div>
-        <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-            <div>
-                <nav aria-label="Page navigation">
-                    <ul class="pagination">
-                        <li>
-                            <a href="/News/Index?page=1" aria-label="Previous">
-                                <span aria-hidden="true">&laquo;</span>
-                            </a>
-                        </li>
-                        @for (int i = 1; i <= ViewBag.lastPage; i++)
-                        {
-                            <li><a href="/News/Index?page=@i">@(i)</a></li>
-                        }
-                        <li>
-                            <a href="/News/Index?page=@(ViewBag.lastPage)" aria-label="Next">
-                                <span aria-hidden="true">&raquo;</span>
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
-        <div class="col-lg-2 col-md-2">
+<div class="row">
+    <div class="col-lg-2 col-md-2">
+    </div>
+    <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+        <div>
+            <nav aria-label="Page navigation">
+                <ul class="pagination">
+                    <li>
+                        <a href="/News/Index?page=1" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                    @for (int i = 1; i <= ViewBag.lastPage; i++)
+                    {
+                        <li><a href="/News/Index?page=@i">@(i)</a></li>
+                    }
+                    <li>
+                        <a href="/News/Index?page=@(ViewBag.lastPage)" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </div>
-    
-
-
-
-
-
+    <div class="col-lg-2 col-md-2">
+    </div>
+</div>
