--- a/NewsEngine2.0/Views/News/EditorIndex.cshtml
+++ b/NewsEngine2.0/Views/News/EditorIndex.cshtml
@@ -21,6 +21,24 @@
         </div>
     </div>
 
+    <div class="row">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
+        <div class="btn-group">
+            <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Sorteaza dupa <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu">
+                <li><a href="/News/IndexSorted/1">Alfabetic</a></li>
+                <li><a href="/News/IndexSorted/3">Crescator dupa data</a></li>
+                <li><a href="/News/IndexSorted/2">Descrescator dupa data</a></li>
+
+            </ul>
+        </div>
+    </div>
+</div>
+<br />
+
     foreach (NewsEngine2._0.Dto.MediaDto.MediaDto item in ViewBag.News)
     {
 
@@ -75,16 +93,16 @@
                 <nav aria-label="Page navigation">
                     <ul class="pagination">
                         <li>
-                            <a href="/News/Index?page=1" aria-label="Previous">
+                            <a href="/News/EditorIndex?page=1" aria-label="Previous">
                                 <span aria-hidden="true">&laquo;</span>
                             </a>
                         </li>
                         @for (int i = 1; i <= ViewBag.lastPage; i++)
                         {
-                            <li><a href="/News/Index?page=@i">@(i)</a></li>
+                            <li><a href="/News/EditorIndex?page=@i">@(i)</a></li>
                         }
                         <li>
-                            <a href="/News/Index?page=@(ViewBag.lastPage)" aria-label="Next">
+                            <a href="/News/EditorIndex?page=@(ViewBag.lastPage)" aria-label="Next">
                                 <span aria-hidden="true">&raquo;</span>
                             </a>
                         </li>
