--- a/NewsEngine2.0/Views/News/IndexSorted.cshtml
+++ b/NewsEngine2.0/Views/News/IndexSorted.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "IndexByCategory";
+    ViewBag.Title = "IndexSorted";
 }
 
 <br />
@@ -12,7 +12,7 @@
 <br />
 <div class="row">
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-        <div class="panel panel-success">
+        <div class="panel panel-info">
             <div class="panel-body">
                 <a class="btn btn-success" href="/News/Index">Toate stirile</a>
                 @foreach (NewsEngine2._0.Models.Category item in ViewBag.Categories)
@@ -40,8 +40,7 @@
         </div>
     </div>
 </div>
-<br />
-
+<br/>
 
 @foreach (NewsEngine2._0.Dto.MediaDto.MediaDto item in ViewBag.News)
 {
@@ -49,26 +48,26 @@
     <div class="row">
 
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            
-                <div class="panel panel-success">
-                    <div class="panel-heading"><a style="color:black" href="/News/Show/@item.News.NewsId">@item.News.Title</a></div>
-                    <div class="panel-body">
-                        <div class="media">
-                            @if (item.Medias.Count > 0)
-                            {
-                                <div class="media-left media-middle">
-                                    <a href="#">
-                                        <img class="media-object" style="width:125px; height:95px;" src="/Images/@item.Medias[0].Path" alt="...">
-                                    </a>
-                                </div>
-                            }
-                            <div class="media-body">
-                                <p class="truncate text-justify"> @item.News.Content</p>
+
+            <div class="panel panel-success">
+                <div class="panel-heading"><a style="color:black" href="/News/Show/@item.News.NewsId">@item.News.Title</a></div>
+                <div class="panel-body">
+                    <div class="media">
+                        @if (item.Medias.Count > 0)
+                        {
+                            <div class="media-left media-middle">
+                                <a href="#">
+                                    <img class="media-object" style="width:125px; height:95px;" src="/Images/@item.Medias[0].Path" alt="...">
+                                </a>
                             </div>
+                        }
+                        <div class="media-body">
+                            <p class="truncate text-justify"> @item.News.Content</p>
                         </div>
                     </div>
-                    @if (User.IsInRole("Administrator"))
-                    {
+                </div>
+                @if (User.IsInRole("Administrator"))
+                {
                     <div class="panel-footer">
 
                         @using (Html.BeginForm(actionName: "Delete", controllerName: "News", method: FormMethod.Post, routeValues: new { id = item.News.NewsId }))
@@ -79,10 +78,11 @@
                             <button class="btn btn-danger" type="submit">Sterge</button>
                             <a class="btn btn-info" href="/News/Edit/@item.News.NewsId">Editeaza</a>
                         }
+
                     </div>
-                    }
-                </div>
-            
+                }
+            </div>
+
         </div>
 
     </div>
@@ -95,16 +95,16 @@
             <nav aria-label="Page navigation">
                 <ul class="pagination">
                     <li>
-                        <a href="/News/IndexByCategory/@ViewBag.Id?page=1" aria-label="Previous">
+                        <a href="/News/IndexSorted/@ViewBag.Id?page=1" aria-label="Previous">
                             <span aria-hidden="true">&laquo;</span>
                         </a>
                     </li>
                     @for (int i = 1; i <= ViewBag.lastPage; i++)
                     {
-                        <li><a href="/News/IndexByCategory/@ViewBag.Id?page=@i">@(i)</a></li>
+                        <li><a href="/News/IndexSorted/@ViewBag.Id?page=@i">@(i)</a></li>
                     }
                     <li>
-                        <a href="/News/IndexByCategory/@ViewBag.Id?page=@(ViewBag.lastPage)" aria-label="Next">
+                        <a href="/News/IndexSorted/@ViewBag.Id?page=@(ViewBag.lastPage)" aria-label="Next">
                             <span aria-hidden="true">&raquo;</span>
                         </a>
                     </li>
@@ -115,4 +115,6 @@
     <div class="col-lg-2 col-md-2">
     </div>
 </div>
+
+
 
