--- a/NewsEngine2.0/Views/Shared/_Layout.cshtml
+++ b/NewsEngine2.0/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
                         <li>@Html.ActionLink("Propune Stire", "New", "ProposedNews")</li>
                         <li>@Html.ActionLink("Datele mele","Edit","User")</li>
                     }
-
+                    @Html.Action("")
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
