--- a/NewsEngine2.0/Views/Shared/CommentDetails.cshtml
+++ b/NewsEngine2.0/Views/Shared/CommentDetails.cshtml
@@ -1,5 +1,30 @@
 ﻿
 @model NewsEngine2._0.Models.Comment
 
-<h2>@Model.User.UserName</h2>
-<h1> @Model.Description</h1>
+
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+    <div class="panel panel-success">
+        <div class="panel-heading">
+            <h5>@Model.User.UserName </h5>
+
+        </div>
+        <div class="media-body">
+            <p> @Model.Description</p>
+        </div>
+        <div class="panel-footer">
+
+            @using (Html.BeginForm(actionName: "Delete", controllerName: "Comment", method: FormMethod.Post, routeValues: new { id = Model.CommentId }))
+            {
+                @Html.Hidden("NewsId", Model.NewsId);
+                @Html.HttpMethodOverride(HttpVerbs.Delete)
+
+                <button class="btn btn-danger" type="submit">Sterge</button>
+                <a class="btn btn-info" href="/Comment/Edit/@Model.CommentId">Editeaza</a>
+
+            }
+
+
+
+        </div>
+    </div>
+</div>
