--- a/NewsEngine2.0/Views/News/IndexProposed.cshtml
+++ b/NewsEngine2.0/Views/News/IndexProposed.cshtml
@@ -14,36 +14,13 @@
         <div class="panel panel-info">
             <div class="panel-body">
                 <a class="btn btn-success" href="/News/Index">Toate stirile</a>
-                @foreach (NewsEngine2._0.Models.Category item in ViewBag.Categories)
-                {
-                    <a class="btn btn-success" href="/News/IndexByCategory/@item.CategoryId">@item.Name</a>
-                }
-                
-                
-                    <a class="btn btn-success" href="/News/NewProposed">Propune stire</a>
-                
+                <a class="btn btn-success" href="/News/NewProposed">Propune stire</a>
+
             </div>
         </div>
     </div>
 </div>
 
-<div class="row">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-      
-        <div class="btn-group">
-            <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Sorteaza dupa <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu">
-                <li><a href="/News/IndexSorted/1">Alfabetic</a></li>
-                <li><a href="/News/IndexSorted/3">Crescator dupa data</a></li>
-                <li><a href="/News/IndexSorted/2">Descrescator dupa data</a></li>
-
-             
-            </ul>
-        </div> 
-    </div>
-</div>
 <br />
 
 @foreach (NewsEngine2._0.Dto.MediaDto.MediaDto item in ViewBag.News)
@@ -52,7 +29,7 @@
     <div class="row">
 
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            @if (item.News.IsProposed == false)
+            @if (item.News.IsProposed == true)
             {
                 <div class="panel panel-success">
                     <div class="panel-heading"><a style="color:black" href="/News/Show/@item.News.NewsId">@item.News.Title</a></div>
@@ -73,18 +50,18 @@
                     </div>
                     @if (User.IsInRole("Administrator"))
                     {
-                    <div class="panel-footer">
+                        <div class="panel-footer">
 
-                        @using (Html.BeginForm(actionName: "Delete", controllerName: "News", method: FormMethod.Post, routeValues: new { id = item.News.NewsId }))
-                        {
+                            @using (Html.BeginForm(actionName: "Delete", controllerName: "News", method: FormMethod.Post, routeValues: new { id = item.News.NewsId }))
+                            {
 
-                            @Html.HttpMethodOverride(HttpVerbs.Delete)
+                                @Html.HttpMethodOverride(HttpVerbs.Delete)
 
-                            <button class="btn btn-danger" type="submit">Sterge</button>
-                            <a class="btn btn-info" href="/News/Edit/@item.News.NewsId">Editeaza</a>
-                        }
+                                <button class="btn btn-danger" type="submit">Sterge</button>
+                                <a class="btn btn-info" href="/News/Edit/@item.News.NewsId">Editeaza</a>
+                            }
 
-                    </div>
+                        </div>
                     }
                 </div>
             }
