--- a/NewsEngine2.0/Views/ProposedNews/Index.cshtml
+++ b/NewsEngine2.0/Views/ProposedNews/Index.cshtml
@@ -18,10 +18,6 @@
                 {
                     <a class="btn btn-success" href="/News/IndexByCategory/@item.CategoryId">@item.Name</a>
                 }
-                
-                
-                    <a class="btn btn-success" href="/News/NewProposed">Propune stire</a>
-                
             </div>
         </div>
     </div>
@@ -29,7 +25,7 @@
 
 <div class="row">
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-      
+
         <div class="btn-group">
             <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Sorteaza dupa <span class="caret"></span>
@@ -39,9 +35,8 @@
                 <li><a href="/News/IndexSorted/3">Crescator dupa data</a></li>
                 <li><a href="/News/IndexSorted/2">Descrescator dupa data</a></li>
 
-             
             </ul>
-        </div> 
+        </div>
     </div>
 </div>
 <br />
@@ -52,7 +47,7 @@
     <div class="row">
 
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            @if (item.News.IsProposed == false)
+            @if (item.News.IsProposed == true)
             {
                 <div class="panel panel-success">
                     <div class="panel-heading"><a style="color:black" href="/News/Show/@item.News.NewsId">@item.News.Title</a></div>
@@ -73,18 +68,18 @@
                     </div>
                     @if (User.IsInRole("Administrator"))
                     {
-                    <div class="panel-footer">
+                        <div class="panel-footer">
 
-                        @using (Html.BeginForm(actionName: "Delete", controllerName: "News", method: FormMethod.Post, routeValues: new { id = item.News.NewsId }))
-                        {
+                            @using (Html.BeginForm(actionName: "Delete", controllerName: "News", method: FormMethod.Post, routeValues: new { id = item.News.NewsId }))
+                            {
 
-                            @Html.HttpMethodOverride(HttpVerbs.Delete)
+                                @Html.HttpMethodOverride(HttpVerbs.Delete)
 
-                            <button class="btn btn-danger" type="submit">Sterge</button>
-                            <a class="btn btn-info" href="/News/Edit/@item.News.NewsId">Editeaza</a>
-                        }
+                                <button class="btn btn-danger" type="submit">Sterge</button>
+                                <a class="btn btn-info" href="/News/Edit/@item.News.NewsId">Editeaza</a>
+                            }
 
-                    </div>
+                        </div>
                     }
                 </div>
             }
