--- a/NewsEngine2.0/Views/Shared/_Layout.cshtml
+++ b/NewsEngine2.0/Views/Shared/_Layout.cshtml
@@ -1,11 +1,11 @@
-﻿
+﻿@using Microsoft.AspNet.Identity
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
-   
+
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -35,7 +35,7 @@
 
                             </ul>
                         </li>
-                       
+
                     }
                     @if (User.IsInRole("Editor"))
                     {
@@ -48,15 +48,15 @@
 
                             </ul>
                         </li>
-                        
+
                     }
                     @if (User.IsInRole("User"))
                     {
-                        
+
                         <li>@Html.ActionLink("Propune Stire", "New", "ProposedNews")</li>
-                        <li>@Html.ActionLink("Datele mele","Edit","User")</li>
+                        <li>@Html.ActionLink("Datele mele", "Edit", "User",new { id = User.Identity.GetUserId() },null)</li>
                     }
-                    @Html.Action("")
+
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -67,13 +67,13 @@
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - ReadyToGo News</p>
-            
+
         </footer>
     </div>
-    
+
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
-  
+
     @RenderSection("scripts", required: false)
 </body>
 </html>
