--- a/NewsEngine2.0/Views/News/Index.cshtml
+++ b/NewsEngine2.0/Views/News/Index.cshtml
@@ -13,11 +13,18 @@
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <div class="panel panel-info">
             <div class="panel-body">
+                <p>
+                    @using (Html.BeginForm("Index", "News", FormMethod.Get))
+                    {
+                        <b>Search article:</b>
+                        @Html.TextBox("search") <input type="submit" value="Search" />
+                    }
+                </p>
                 <a class="btn btn-success" href="/News/Index">Toate stirile</a>
                 @foreach (NewsEngine2._0.Models.Category item in ViewBag.Categories)
                 {
                     <a class="btn btn-success" href="/News/IndexByCategory/@item.CategoryId">@item.Name</a>
-                }
+                    }
                 
                 
                     <a class="btn btn-success" href="/News/NewProposed">Propune stire</a>
